--- a/index.html
+++ b/index.html
@@ -47,41 +47,41 @@
           });
         }
 
-        var points = [ new google.maps.LatLng(41.553803,-87.454423),
-          new google.maps.LatLng(41.553803,-87.457008),
-          new google.maps.LatLng(41.552013,-87.457008),
-          new google.maps.LatLng(41.551972,-87.459358),
+        var points = [
+          new google.maps.LatLng(41.551887,-87.453886),
+          new google.maps.LatLng(41.551887,-87.456923),
+          new google.maps.LatLng(41.550872,-87.456850),
+          new google.maps.LatLng(41.548696,-87.454723),
+          new google.maps.LatLng(41.548319,-87.450314),
+          new google.maps.LatLng(41.548271,-87.442203),
+          new google.maps.LatLng(41.544633,-87.442213),
+          new google.maps.LatLng(41.544666,-87.444799),
+          new google.maps.LatLng(41.546529,-87.444799),
+          new google.maps.LatLng(41.546713,-87.444938),
+          new google.maps.LatLng(41.546842,-87.445250),
+          new google.maps.LatLng(41.547323,-87.450571),
+          new google.maps.LatLng(41.544690,-87.450582),
+          new google.maps.LatLng(41.544706,-87.452009),
 
           // Start Path
-          new google.maps.LatLng(41.551635,-87.45924),
-          new google.maps.LatLng(41.551274,-87.458586),
-          new google.maps.LatLng(41.550419,-87.457722),
-          new google.maps.LatLng(41.550146,-87.457615),
-          new google.maps.LatLng(41.549178,-87.456644),
-          new google.maps.LatLng(41.548901,-87.456198),
-          new google.maps.LatLng(41.548122,-87.455356),
-          new google.maps.LatLng(41.547713,-87.455254),
-          new google.maps.LatLng(41.546773,-87.454326),
-          new google.maps.LatLng(41.546107,-87.453548),
-          new google.maps.LatLng(41.545376,-87.452942),
           new google.maps.LatLng(41.544975,-87.452111),
+          new google.maps.LatLng(41.545376,-87.452942),
+          new google.maps.LatLng(41.546107,-87.453548),
+          new google.maps.LatLng(41.546773,-87.454326),
+          new google.maps.LatLng(41.547713,-87.455254),
+          new google.maps.LatLng(41.548122,-87.455356),
+          new google.maps.LatLng(41.548901,-87.456198),
+          new google.maps.LatLng(41.549178,-87.456644),
+          new google.maps.LatLng(41.550146,-87.457615),
+          new google.maps.LatLng(41.550419,-87.457722),
+          new google.maps.LatLng(41.551274,-87.458586),
+          new google.maps.LatLng(41.551635,-87.45924),
           // End Path
 
-          new google.maps.LatLng(41.544706,-87.452009),
-          new google.maps.LatLng(41.544690,-87.450582),
-          new google.maps.LatLng(41.547323,-87.450571),
-          new google.maps.LatLng(41.546842,-87.445250),
-          new google.maps.LatLng(41.546713,-87.444938),
-          new google.maps.LatLng(41.546529,-87.444799),
-          new google.maps.LatLng(41.544666,-87.444799),
-          new google.maps.LatLng(41.544633,-87.442213),
-          new google.maps.LatLng(41.548271,-87.442203),
-          new google.maps.LatLng(41.548319,-87.450314),
-          new google.maps.LatLng(41.548696,-87.454723),
-          new google.maps.LatLng(41.550872,-87.456850),
-          new google.maps.LatLng(41.553494,-87.456850),
-          new google.maps.LatLng(41.553723,-87.455925),
-          new google.maps.LatLng(41.553723,-87.454423)];
+          new google.maps.LatLng(41.551972,-87.459358),
+          new google.maps.LatLng(41.551964,-87.453897),
+          new google.maps.LatLng(41.552353,-87.453908),
+          ];
 
         new google.maps.Polyline({
           path: points,
